<resources>
    <string name="app_name">SQLite TASK</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_subject">CreateSubjectActivity</string>
    <string name="mark1">mark1</string>
    <string name="mark2">mark2</string>
    <string name="mark3">mark3</string>
    <string name="result">result</string>
    <string name="rank">rank</string>
    <string name="cross_image_content_description">Delete student from SQLite database</string>
    <string name="empty_list_message">List is Empty!</string>
    <string name="student_name">Student Name</string>
    <string name="update">Update</string>
    <string name="cancel_button">Cancel</string>
    <string name="create_button">Create</string>
    <string name="all_delete">All Delete</string>
    <string name="edit_button_description">Edit Single student information</string>
    <string name="subject_name">Subject Name</string>
    <string name="subject_code">Subject Code</string>
    <string name="subject_credit">Subject Credit</string>
    <string name="add_new_subject">Add New Subject</string>
    <string name="student_information">Student Information</string>
    <string name="name">Name</string>
    <string name="registration_no_with_color">Registration Number: </string>
    <string name="subject_list">Subject List</string>
    <string name="student_list">Student List</string>
    <string name="database_summary">Total Student: %1$d. Total Subject: %2$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_button">Update</string>
</resources>
