<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    tools:context=".Features.StudentCRUD.UpdateStudentInfo.StudentUpdateDialogFragment">

    <EditText
        android:id="@+id/studentNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/student_name"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/mark1EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentNameEditText"
        android:hint="@string/mark1"
        android:inputType="number"/>

    <EditText
        android:id="@+id/mark2EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mark1EditText"
        android:hint="@string/mark2"
        android:inputType="phone"/>

    <EditText
        android:id="@+id/mark3EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mark2EditText"
        android:hint="@string/mark3"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/rankEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mark3EditText"
        android:hint="@string/rank"
        android:inputType="phone"/>

    <EditText
        android:id="@+id/resultEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rankEditText"
        android:hint="@string/result"
        android:inputType="textEmailAddress"/>

    <Button
        android:id="@+id/updateStudentInfoButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/resultEditText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/cancelButton"
        android:text="@string/update"/>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/resultEditText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/updateStudentInfoButton"
        android:text="@string/cancel_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>
