<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginRight="8dp"
    android:padding="8dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:text="John Doe"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/editImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/crossImageView"
        app:srcCompat="@drawable/ic_mode_edit_black_24dp"
        android:alpha="0.5"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/edit_button_description"/>

    <ImageView
        android:id="@+id/crossImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/ic_delete_black_24dp"
        android:alpha="0.5"
        android:contentDescription="@string/cross_image_content_description" />

    <TextView
        android:id="@+id/mark1Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/nameTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/mark1"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/mark11TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="100145"
        app:layout_constraintTop_toBottomOf="@id/nameTextView"
        app:layout_constraintLeft_toRightOf="@id/mark1Title"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"/>

    <TextView
        android:id="@+id/mark2Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mark1Title"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/mark2"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/mark22TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mark1Title"
        app:layout_constraintLeft_toRightOf="@id/mark2Title"
        tools:text="john@gmail.com"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"/>

    <TextView
        android:id="@+id/mark3Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mark3Title"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/mark3"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/mark33TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="01559541265"
        app:layout_constraintTop_toBottomOf="@id/mark2Title"
        app:layout_constraintLeft_toRightOf="@id/mark3Title"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"/>

    <TextView
        android:id="@+id/rankTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mark3Title"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/rank"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/rank1TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mark3Title"
        app:layout_constraintLeft_toRightOf="@id/rankTitle"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"/>

    <TextView
        android:id="@+id/resultTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rankTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/result"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/result1TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="01559541265"
        app:layout_constraintTop_toBottomOf="@id/rankTitle"
        app:layout_constraintLeft_toRightOf="@id/resultTitle"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>